--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
 	],
 	"main": "./out/extension.js",
 	"contributes": {
+		"snippets": [
+			{
+				"language": "ampl",
+				"path": "./snippets/ampl.json"
+			}
+		],
 		"commands": [
 			{
 				"command": "ampl.openConsole",
