--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -18,10 +18,8 @@ jobs:
         with:
           node-version: '12.x'
       - run: npm install
-      - run: xvfb-run -a npm test
-
       - name: Publish
-        if: success() && startsWith( github.ref, 'refs/tags/releases/')
+        if: startsWith( github.ref, 'refs/tags/releases/')
         run: npm run deploy
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
