--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -19,7 +19,7 @@ jobs:
           node-version: '12.x'
       - run: npm install
       - name: Publish
-        if: startsWith( github.ref, 'refs/tags/releases/')
+        if: github.event_name == 'release'
         run: npm run deploy
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
